# 5g_drone_ROS2

./: .gitignore  .gitmodules  README.md  build_beacons.sh  call_attitude.sh  fgit.sh  get_build.sh  get_build_run_controller.sh  get_usb_device_port.sh  install_mavproxy.sh  mav.parm  mav.tlog  mav.tlog.raw  pgit.sh  restart_services.sh  source_dirs.sh  source_dirs.txt  test_stream.py
api/: index.js  package-lock.json  package.json
api/public/css/: stylesheet.css
api/views/: index.ejs  test.ejs
camera/: package.xml
config/: params.yaml
cpp_pubsub/: CMakeLists.txt  package.xml
drone_scripts/: find_id.sh  restart_services.sh  start_api.sh  start_camera.sh  start_failsafe.sh  start_height_sensor.sh  start_lidar.sh  start_positionchanger.sh  start_px4_connection.sh  start_relais_controller.sh  start_status.sh  stop_services.sh
drone_sensors/: CMakeLists.txt
drone_sensors/src/: height_sensor.cpp
install/: local_setup.sh  setup.sh
install/beacon_positioning/include/beacon_positioning/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  tracker_position.h  tracker_position.hpp
install/beacon_positioning/lib/beacon_positioning/: tracker_position
install/beacon_positioning/share/beacon_positioning/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/beacon_positioning/share/beacon_positioning/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  beacon_positioningConfig-version.cmake  beacon_positioningConfig.cmake  beacon_positioning__rosidl_generator_cExport-noconfig.cmake  beacon_positioning__rosidl_generator_cExport.cmake  beacon_positioning__rosidl_generator_cppExport.cmake  beacon_positioning__rosidl_typesupport_cExport-noconfig.cmake  beacon_positioning__rosidl_typesupport_cExport.cmake  beacon_positioning__rosidl_typesupport_cppExport-noconfig.cmake  beacon_positioning__rosidl_typesupport_cppExport.cmake  beacon_positioning__rosidl_typesupport_introspection_cExport.cmake  (+6 more)
install/drone_sensors/lib/drone_sensors/: height_sensor
install/drone_sensors/share/drone_sensors/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/px4_ros_com/include/px4_ros_com/: frame_transforms.h
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
my_package_py/: package.xml  setup.cfg  setup.py
my_package_py/my_package_py/: my_node_py.py
px4_connection/src/: heartbeat.cpp
py_pubsub/: package.xml  setup.py
script_outputs/: script-output-14-04-23-1046.txt  script-output-25-05-1123.txt
services/: drone_find_usb_devices.service  drone_height_sensor.service  drone_lidar.service
src/: README.md  mav.parm  mav.tlog  mav.tlog.raw
src/api_communication/: package.xml  setup.cfg  setup.py
src/api_communication/api_communication/: api_listener.py
src/api_communication/test/: test_api_listener.py
src/beacon_positioning/: CMakeLists.txt  package.xml
src/beacon_positioning/launch/: beacon_positioning_launch.py
src/beacon_positioning/msg/: TrackerPosition.msg
src/beacon_positioning/src/: tracker_position.cpp
src/camera/: package.xml  setup.py
src/camera/camera/: camera_controller.py
src/camera/test/: test_camera.py
src/drone_controls/: CMakeLists.txt  package.xml
src/drone_controls/src/: PositionChanger.cpp
src/drone_controls/test/: test_positionchanger.py  test_positionchanger_height.py  test_positionchanger_lidar.py
src/drone_sensors/: package.xml
src/drone_sensors/src/: height_sensor.cpp
src/drone_services/: CMakeLists.txt  package.xml
src/drone_services/msg/: DroneControlMode.msg  DroneRouteStatus.msg  DroneStatus.msg  FailsafeMsg.msg  HeightData.msg  LidarReading.msg
src/drone_services/srv/: ControlRelais.srv  EnableFailsafe.srv  Land.srv  MovePosition.srv  SetAttitude.srv  SetTrajectory.srv  SetVehicleControl.srv  SetVelocity.srv  TakePicture.srv
src/drone_status/: package.xml  setup.cfg  setup.py
src/drone_status/drone_status/: drone_status.py
src/failsafe/: package.xml  setup.cfg  setup.py
src/failsafe/failsafe/: failsafe.py
src/failsafe/test/: test_failsafe.py
src/height/: CMakeLists.txt  package.xml
src/height/src/: height_reader.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/object_detection/: CMakeLists.txt  package.xml
src/object_detection/launch/: object_detection_launch.py  object_detection_launch_both.py  object_detection_launch_multiflex.py
src/object_detection/msg/: MultiflexReading.msg
src/object_detection/src/: lidar_reader.cpp  multiflex_reader.cpp
src/px4_connection/: CMakeLists.txt  package.xml
src/px4_connection/include/: attitude_msg_code.hpp  drone_control_modes.h
src/px4_connection/launch/: px4_controller_heardbeat_launch.py
src/px4_connection/src/: heartbeat.cpp  px4_controller.cpp
src/px4_connection/srv/: SetAttitude.srv
src/px4_connection/test/: test_failsafe_enabled.py  test_heartbeat_control_mode.py
src/relais_control/: package.xml  setup.cfg  setup.py
src/relais_control/relais_control/: relais_controller.py
src/send_setpoints/: CMakeLists.txt  package.xml
src/send_setpoints/src/: send_setpoint.cpp
src/test_controls/: package.xml  setup.cfg  setup.py
src/test_controls/test_controls/: test_controller.py
(+3787 files in other folders)
