<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>camera</name>
    <version>0.0.0</version>
    <description>Package for controlling the camera of the drone</description>
    <maintainer email="semmer99@gmail.com">ubuntu</maintainer>
    <license>Apache License 2.0</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>drone_services</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>