<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_controls</name>
  <version>0.0.0</version>
  <description>Package to handle control commands from the api to the PX4Controller</description>
  <maintainer email="semmer99@gmail.com">sem</maintainer>
  <license>Apache Licence 2.0</license>
  <depend>rclcpp</depend>
  <depend>drone_services</depend>
  <depend>object_detection</depend>
  <depend>height</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
