<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>failsafe</name>
  <version>0.0.0</version>
  <description>Package to control a failsafe for the drone</description>
  <maintainer email="semmer99@gmail.com">ubuntu</maintainer>
  <license>Apache License 2.0</license>
  <depend>rclpy</depend>
  <depend>drone_services</depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
